Introduced 'dvc pull src/raw_data.csv' in docker-compose.yaml and simplified Dockerfile

--- a/src/templates/ml_interface.html
+++ b/src/templates/ml_interface.html
@@ -59,7 +59,7 @@
         <!-- Output Section (Right Side) -->
         <div class="output-section">
             {% if output is none %}
-                <p class="no-output">Please fill-in all of the inputs</p>
+                <p class="no-output">Please fill in all the inputs</p>
             {% else %}
                 <p class="prediction-output"><b>Prediction</b>:<br> {{ output|safe }}</p>
             {% endif %}
